--- a/src/main/resources/main/login final (1).fxml
+++ b/src/main/resources/main/login final (1).fxml
@@ -29,7 +29,7 @@
          <children>
             <VBox alignment="CENTER" prefHeight="302.0" prefWidth="276.0" style="-fx-background-radius: 10px;" VBox.vgrow="ALWAYS">
                <children>
-                  <Label alignment="CENTER" prefHeight="29.0" prefWidth="200.0" text="Login">
+                  <Label alignment="CENTER" prefHeight="29.0" prefWidth="200.0" text="Byte_Me">
                      <VBox.margin>
                         <Insets />
                      </VBox.margin>
@@ -37,39 +37,51 @@
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <Region prefHeight="16.0" prefWidth="310.0" />
+                  <Region prefHeight="13.0" prefWidth="276.0" />
+                  <Label alignment="CENTER" prefHeight="26.0" prefWidth="126.0" textFill="RED" />
+                  <Region prefHeight="12.0" prefWidth="276.0" />
                   <HBox alignment="CENTER" prefHeight="36.0" prefWidth="310.0">
                      <children>
                         <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="124.0" style="-fx-background-color: #086ed4;" text="Login" textFill="#ececec">
                            <HBox.margin>
                               <Insets right="2.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
                         </Button>
                         <Button layoutX="40.0" layoutY="10.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="122.0" style="-fx-background-color: cream; -fx-border-color: silver;" text="SignUp" HBox.hgrow="ALWAYS">
                            <HBox.margin>
                               <Insets left="2.0" />
-                           </HBox.margin></Button>
+                           </HBox.margin>
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font></Button>
                      </children>
                   </HBox>
                   <Region prefHeight="18.0" prefWidth="310.0" />
-                  <TextField alignment="CENTER" maxWidth="400.0" prefHeight="10.0" prefWidth="276.0" promptText="Email Adress" VBox.vgrow="ALWAYS">
+                  <TextField alignment="CENTER" maxWidth="400.0" prefHeight="10.0" prefWidth="276.0" promptText="User ID" style="-fx-background-radius: 10;" VBox.vgrow="ALWAYS">
                      <VBox.margin>
                         <Insets />
                      </VBox.margin>
                   </TextField>
                   <Region layoutX="10.0" layoutY="119.0" prefHeight="18.0" prefWidth="310.0" />
-                  <PasswordField alignment="CENTER" maxWidth="400.0" promptText="password" />
-                  <Region layoutX="10.0" layoutY="168.0" prefHeight="3.0" prefWidth="310.0" />
-                  <Button contentDisplay="RIGHT" mnemonicParsing="false" prefHeight="26.0" prefWidth="458.0" style="-fx-background-color: transparent;" text="Forgot password?">
+                  <PasswordField alignment="CENTER" maxWidth="400.0" promptText="Password" style="-fx-background-radius: 10;" />
+                  <Region prefHeight="17.0" prefWidth="276.0" />
+                  <Region layoutX="10.0" layoutY="168.0" prefHeight="3.0" prefWidth="310.0" style="-fx-background-radius: 10;" />
+                  <Button contentDisplay="RIGHT" mnemonicParsing="false" prefHeight="21.0" prefWidth="276.0" style="-fx-background-color: transparent;" text="Forgot Password?">
                      <VBox.margin>
                         <Insets />
                      </VBox.margin>
                   </Button>
                   <Region layoutX="10.0" layoutY="168.0" prefHeight="9.0" prefWidth="310.0" />
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="245.0" style="-fx-background-color: #086ed4;" text="Login " textFill="WHITE">
+                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="162.0" style="-fx-background-color: #086ed4; -fx-background-radius: 15;" text="Login " textFill="WHITE">
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
                   </Button>
                </children>
                <VBox.margin>
