--- a/src/main/resources/css/styling.css
+++ b/src/main/resources/css/styling.css
@@ -1,4 +1,4 @@
 .home{
-    -fx-background-image: url("img/b4.jpg");
+    -fx-background-image: url("/img/b4.jpg");
     -fx-background-postion: bottom right;
 }
