--- a/src/main/resources/fxml/signup.fxml
+++ b/src/main/resources/fxml/signup.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -66,12 +67,28 @@
                      </VBox.margin>
                   </TextField>
                   <Region layoutX="10.0" layoutY="119.0" prefHeight="13.0" prefWidth="276.0" />
-                  <PasswordField alignment="CENTER" maxWidth="400.0" prefHeight="32.0" prefWidth="276.0" promptText="Name" style="-fx-background-radius: 10;" />
+                  <TextField alignment="CENTER" layoutX="10.0" layoutY="176.0" maxWidth="400.0" prefHeight="32.0" prefWidth="276.0" promptText="Name" style="-fx-background-radius: 10;" />
                   <Region prefHeight="11.0" prefWidth="276.0" />
                   <PasswordField alignment="CENTER" layoutX="10.0" layoutY="240.0" maxWidth="400.0" prefHeight="31.0" prefWidth="276.0" promptText="Password" style="-fx-background-radius: 10;" />
-                  <Region layoutX="10.0" layoutY="168.0" prefHeight="3.0" prefWidth="310.0" style="-fx-background-radius: 10;" />
-                  <Region layoutX="10.0" layoutY="239.0" prefHeight="10.0" prefWidth="276.0" />
-                  <TextField alignment="CENTER" layoutX="10.0" layoutY="182.0" maxWidth="400.0" prefHeight="31.0" prefWidth="276.0" promptText="Role" style="-fx-background-radius: 10;" />
+                  <Region layoutX="10.0" layoutY="168.0" prefHeight="15.0" prefWidth="276.0" style="-fx-background-radius: 10;" />
+                  <VBox alignment="CENTER" prefHeight="58.0" prefWidth="276.0">
+                     <children>
+                        <HBox alignment="BASELINE_CENTER" prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <CheckBox mnemonicParsing="false" text="ADMIN">
+                                 <HBox.margin>
+                                    <Insets right="5.0" />
+                                 </HBox.margin>
+                              </CheckBox>
+                              <CheckBox mnemonicParsing="false" text="CASHIER">
+                                 <HBox.margin>
+                                    <Insets left="5.0" />
+                                 </HBox.margin>
+                              </CheckBox>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
                   <Region layoutX="10.0" layoutY="168.0" prefHeight="10.0" prefWidth="276.0" />
                   <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="162.0" style="-fx-background-color: #086ed4; -fx-background-radius: 15;" text="Login " textFill="WHITE">
                      <VBox.margin>
