--- a/src/main/resources/css/styling.css
+++ b/src/main/resources/css/styling.css
@@ -2,3 +2,6 @@
     -fx-background-image: url("/img/b4.jpg");
     -fx-background-postion: bottom right;
 }
+.sign{
+-fx-background-image: url("/img/b4.jpg");
+}
