--- a/src/main/resources/fxml/confirmLogout.fxml
+++ b/src/main/resources/fxml/confirmLogout.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="205.0" prefWidth="381.0" styleClass="home" stylesheets="@../OneDrive/Desktop/New%20folder/styling.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Elements.PopUpBox">
+<BorderPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="205.0" prefWidth="381.0" styleClass="home" stylesheets="@../OneDrive/Desktop/New%20folder/styling.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.AlertBoxController">
    <center>
       <HBox alignment="CENTER_LEFT" prefHeight="2.0" prefWidth="382.0" BorderPane.alignment="CENTER">
          <children>
@@ -33,7 +33,7 @@
                   <Region prefHeight="22.0" prefWidth="273.0" />
                   <HBox prefHeight="26.0" prefWidth="270.0">
                      <children>
-                        <Button mnemonicParsing="false" onMouseClicked="#gotoLogin" prefHeight="26.0" prefWidth="40.0" text="OK" textFill="#d91515">
+                        <Button fx:id="okbutton" mnemonicParsing="false" onMouseClicked="#gotoLogin" prefHeight="26.0" prefWidth="40.0" text="OK" textFill="#d91515">
                            <HBox.margin>
                               <Insets left="50.0" />
                            </HBox.margin>
@@ -42,7 +42,7 @@
                            </font>
                         </Button>
                         <Region prefHeight="26.0" prefWidth="54.0" />
-                        <Button fx:id="closeButton" mnemonicParsing="false" onMouseClicked="#close" text="Cancel" textFill="#e70f0f" />
+                        <Button fx:id="cancelbutton" mnemonicParsing="false" onMouseClicked="#close" text="Cancel" textFill="#e70f0f" />
                      </children>
                   </HBox>
                </children>
