--- a/src/main/resources/fxml/PROFILE PASSWORD.fxml
+++ b/src/main/resources/fxml/PROFILE PASSWORD.fxml
@@ -21,11 +21,11 @@
          <children>
             <HBox prefHeight="72.0" prefWidth="156.0">
                <children>
-                  <Label alignment="CENTER" prefHeight="81.0" prefWidth="195.0" text="BYTE_ME">
+                  <Button mnemonicParsing="false" prefHeight="99.0" prefWidth="190.0" text="BYTE_ME">
                      <font>
-                        <Font size="31.0" />
+                        <Font size="28.0" />
                      </font>
-                  </Label>
+                  </Button>
                </children>
             </HBox>
             <Button mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="PROFILE" />
@@ -82,12 +82,12 @@
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <Label prefHeight="18.0" prefWidth="178.0" text="ENTRE CURRENT PASSWORD" />
+                              <Label prefHeight="18.0" prefWidth="178.0" text=" CURRENT PASSWORD" />
                               <TextField GridPane.rowIndex="1">
                                  <GridPane.margin>
                                     <Insets right="10.0" />
                                  </GridPane.margin></TextField>
-                              <Label prefHeight="18.0" prefWidth="150.0" text="ENTRE NEW PASSWORD " GridPane.rowIndex="2" />
+                              <Label prefHeight="18.0" prefWidth="150.0" text=" NEW PASSWORD " GridPane.rowIndex="2" />
                               <TextField layoutX="137.0" layoutY="43.0" GridPane.rowIndex="3">
                                  <GridPane.margin>
                                     <Insets right="10.0" />
@@ -97,8 +97,8 @@
                                  <GridPane.margin>
                                     <Insets right="10.0" />
                                  </GridPane.margin></TextField>
-                              <Label layoutX="222.0" layoutY="264.0" prefHeight="18.0" prefWidth="154.0" text="CONFROM PASSWORD" GridPane.rowIndex="4" />
-                              <Button alignment="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="110.0" text="CONFORM" GridPane.columnIndex="1" GridPane.rowIndex="8">
+                              <Label layoutX="222.0" layoutY="264.0" prefHeight="18.0" prefWidth="154.0" text="CONFIRM PASSWORD" GridPane.rowIndex="4" />
+                              <Button alignment="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="110.0" text="CONFIRM" GridPane.columnIndex="1" GridPane.rowIndex="8">
                                  <GridPane.margin>
                                     <Insets left="60.0" />
                                  </GridPane.margin>
