--- a/src/main/resources/fxml/PROFILE EDIT.fxml
+++ b/src/main/resources/fxml/PROFILE EDIT.fxml
@@ -21,11 +21,11 @@
          <children>
             <HBox prefHeight="72.0" prefWidth="156.0">
                <children>
-                  <Label alignment="CENTER" prefHeight="81.0" prefWidth="195.0" text="BYTE_ME">
+                  <Button mnemonicParsing="false" prefHeight="118.0" prefWidth="202.0" text="BYTE_ME">
                      <font>
-                        <Font size="31.0" />
+                        <Font size="26.0" />
                      </font>
-                  </Label>
+                  </Button>
                </children>
             </HBox>
             <Button mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="PROFILE" />
@@ -99,7 +99,7 @@
                                     <Insets right="10.0" />
                                  </GridPane.margin></TextField>
                               <Label layoutX="222.0" layoutY="264.0" prefHeight="18.0" prefWidth="102.0" text="PHONE NUMBER" GridPane.rowIndex="4" />
-                              <Button alignment="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="110.0" text="CONFORM" GridPane.columnIndex="1" GridPane.rowIndex="8">
+                              <Button alignment="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="110.0" text="CONFIRM" GridPane.columnIndex="1" GridPane.rowIndex="8">
                                  <GridPane.margin>
                                     <Insets left="60.0" />
                                  </GridPane.margin>
