--- a/src/main/resources/fxml/PROFILE.fxml
+++ b/src/main/resources/fxml/PROFILE.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -21,11 +20,11 @@
          <children>
             <HBox prefHeight="72.0" prefWidth="156.0">
                <children>
-                  <Label alignment="CENTER" prefHeight="81.0" prefWidth="195.0" text="BYTE_ME">
+                  <Button mnemonicParsing="false" prefHeight="78.0" prefWidth="155.0" text="BYTE_ME">
                      <font>
-                        <Font size="31.0" />
+                        <Font size="26.0" />
                      </font>
-                  </Label>
+                  </Button>
                </children>
             </HBox>
             <Button mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="PROFILE" />
@@ -71,15 +70,15 @@
                           </rowConstraints>
                            <children>
                               <Label prefHeight="18.0" prefWidth="67.0" text="NAME" />
-                              <TextField GridPane.columnIndex="1" />
                               <Label prefHeight="18.0" prefWidth="106.0" text="DEPARTMENT" GridPane.rowIndex="1" />
                               <Label prefHeight="18.0" prefWidth="74.0" text="ID" GridPane.rowIndex="2" />
-                              <TextField layoutX="137.0" layoutY="12.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextField layoutX="137.0" layoutY="43.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                               <Label layoutX="10.0" layoutY="77.0" prefHeight="18.0" prefWidth="129.0" text="DATE OF BIRTH" GridPane.rowIndex="3" />
-                              <TextField layoutX="137.0" layoutY="73.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                               <Label layoutX="10.0" layoutY="107.0" prefHeight="18.0" prefWidth="102.0" text="PHONE NUMBER" GridPane.rowIndex="4" />
-                              <TextField layoutX="137.0" layoutY="104.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <Label prefHeight="18.0" prefWidth="146.0" GridPane.columnIndex="1" />
+                              <Label layoutX="227.0" layoutY="21.0" prefHeight="18.0" prefWidth="146.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Label layoutX="227.0" layoutY="61.0" prefHeight="18.0" prefWidth="146.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label layoutX="227.0" layoutY="102.0" prefHeight="18.0" prefWidth="146.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Label layoutX="227.0" layoutY="142.0" prefHeight="18.0" prefWidth="146.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                            </children>
                            <VBox.margin>
                               <Insets left="6.0" />
