--- a/src/main/resources/fxml/Employee Details.fxml
+++ b/src/main/resources/fxml/Employee Details.fxml
@@ -11,34 +11,36 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="583.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="583.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.EmployeeController">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="TOP_CENTER" prefHeight="50.0" prefWidth="499.0">
+            <HBox alignment="TOP_CENTER" prefHeight="50.0" prefWidth="704.0">
                <children>
-                  <TextField alignment="CENTER" prefHeight="26.0" prefWidth="200.0" promptText="Search Employee" />
-                  <Button mnemonicParsing="false" text="Search">
+                  <TextField fx:id="searchemp" alignment="CENTER" prefHeight="24.0" prefWidth="200.0" promptText="Search Employee">
                      <HBox.margin>
-                        <Insets left="10.0" />
+                        <Insets top="15.0" />
+                     </HBox.margin></TextField>
+                  <Region prefHeight="72.0" prefWidth="25.0" />
+                  <Button fx:id="addbutton" layoutX="170.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#addemployee" text="Add">
+                     <HBox.margin>
+                        <Insets left="10.0" top="15.0" />
                      </HBox.margin>
                   </Button>
-                  <Region prefHeight="72.0" prefWidth="25.0" />
-                  <TextField alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="26.0" prefWidth="200.0" promptText="Add New Employee" />
-                  <Button layoutX="170.0" layoutY="10.0" mnemonicParsing="false" text="Add">
+                  <Region prefHeight="50.0" prefWidth="14.0" />
+                  <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="71.0" text="Remove">
                      <HBox.margin>
-                        <Insets left="10.0" />
+                        <Insets top="15.0" />
                      </HBox.margin>
                   </Button>
                </children>
             </HBox>
-            <TableView prefHeight="349.0" prefWidth="499.0" VBox.vgrow="ALWAYS">
+            <TableView fx:id="tableview" prefHeight="349.0" prefWidth="499.0" VBox.vgrow="ALWAYS">
               <columns>
-                <TableColumn prefWidth="110.4000244140625" text="Name" />
-                <TableColumn minWidth="0.0" prefWidth="135.199951171875" text="ID" />
-                  <TableColumn prefWidth="136.79998779296875" text="Phone Number" />
-                  <TableColumn prefWidth="75.0" text="Gender" />
+                <TableColumn fx:id="namecol" prefWidth="110.4000244140625" text="Name" />
+                <TableColumn fx:id="idcol" minWidth="0.0" prefWidth="135.199951171875" text="ID" />
+                  <TableColumn fx:id="phonecol" prefWidth="136.79998779296875" text="Phone Number" />
+                  <TableColumn fx:id="gendercall" prefWidth="75.0" text="Gender" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
