--- a/src/main/resources/fxml/PROFILE PASSWORD.fxml
+++ b/src/main/resources/fxml/PROFILE PASSWORD.fxml
@@ -15,24 +15,24 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" styleClass="home" stylesheets="@styling.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" styleClass="home" stylesheets="@styling.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.ChangePasswordController">
    <left>
       <VBox prefHeight="400.0" prefWidth="155.0" BorderPane.alignment="CENTER">
          <children>
             <HBox prefHeight="72.0" prefWidth="156.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="99.0" prefWidth="190.0" text="BYTE_ME">
+                  <Button fx:id="byteme2" mnemonicParsing="false" onMouseClicked="#opendash_frompass" prefHeight="99.0" prefWidth="190.0" text="BYTE_ME">
                      <font>
                         <Font size="28.0" />
                      </font>
                   </Button>
                </children>
             </HBox>
-            <Button mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="PROFILE" />
-            <Button layoutX="10.0" layoutY="82.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="EDIT PROFILE" />
-            <Button layoutX="10.0" layoutY="132.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="CHANGE PASSWORD" />
-            <Region prefHeight="329.0" prefWidth="155.0" />
-            <Button layoutX="10.0" layoutY="181.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="LOGOUT" />
+            <Button fx:id="openprofrompass" mnemonicParsing="false" onMouseClicked="#open_profile_frompass" prefHeight="49.0" prefWidth="190.0" text="PROFILE" VBox.vgrow="ALWAYS" />
+            <Button fx:id="opendit_pro" layoutX="10.0" layoutY="82.0" mnemonicParsing="false" onMouseClicked="#openeditpro_frompass" prefHeight="49.0" prefWidth="190.0" text="EDIT PROFILE" VBox.vgrow="ALWAYS" />
+            <Button layoutX="10.0" layoutY="132.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="CHANGE PASSWORD" VBox.vgrow="ALWAYS" />
+            <Region prefHeight="329.0" prefWidth="155.0" VBox.vgrow="ALWAYS" />
+            <Button fx:id="logoutfrompass" layoutX="10.0" layoutY="181.0" mnemonicParsing="false" onMouseClicked="#logout_from_pass" prefHeight="49.0" prefWidth="190.0" text="LOGOUT" VBox.vgrow="ALWAYS" />
          </children>
       </VBox>
    </left>
@@ -47,11 +47,10 @@
                         <ImageView fitHeight="144.0" fitWidth="188.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../../Downloads/mm.png" />
-                           </image></ImageView>
-                        <Label alignment="TOP_CENTER" prefHeight="36.0" prefWidth="174.0" text="Label">
-                           <padding>
-                              <Insets right="19.0" />
-                           </padding></Label>
+                           </image>
+                           <VBox.margin>
+                              <Insets left="20.0" />
+                           </VBox.margin></ImageView>
                         <Label alignment="TOP_CENTER" layoutX="10.0" layoutY="154.0" prefHeight="36.0" prefWidth="174.0" text="STATUS">
                            <padding>
                               <Insets right="20.0" />
@@ -109,6 +108,9 @@
                            </VBox.margin>
                         </GridPane>
                      </children>
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
                   </VBox>
                </children>
             </HBox>
