--- a/src/main/resources/fxml/PROFILE.fxml
+++ b/src/main/resources/fxml/PROFILE.fxml
@@ -20,7 +20,7 @@
          <children>
             <HBox prefHeight="72.0" prefWidth="156.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="78.0" prefWidth="155.0" text="BYTE_ME">
+                  <Button fx:id="byteme1" mnemonicParsing="false" onMouseClicked="#opendashboard_fromprofile" prefHeight="78.0" prefWidth="155.0" text="BYTE_ME">
                      <font>
                         <Font size="26.0" />
                      </font>
@@ -28,10 +28,10 @@
                </children>
             </HBox>
             <Button mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="PROFILE" />
-            <Button layoutX="10.0" layoutY="82.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="EDIT PROFILE" />
-            <Button layoutX="10.0" layoutY="132.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="CHANGE PASSWORD" />
-            <Region prefHeight="329.0" prefWidth="155.0" />
-            <Button layoutX="10.0" layoutY="181.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="LOGOUT" />
+            <Button layoutX="10.0" layoutY="82.0" mnemonicParsing="false" onMouseClicked="#editprofilepage" prefHeight="49.0" prefWidth="190.0" text="EDIT PROFILE" />
+            <Button layoutX="10.0" layoutY="132.0" mnemonicParsing="false" onMouseClicked="#changepasspage" prefHeight="49.0" prefWidth="190.0" text="CHANGE PASSWORD" />
+            <Region prefHeight="329.0" prefWidth="155.0" VBox.vgrow="ALWAYS" />
+            <Button fx:id="logoutfromprofile" layoutX="10.0" layoutY="181.0" mnemonicParsing="false" onMouseClicked="#logout_from_profile" prefHeight="49.0" prefWidth="190.0" text="LOGOUT" />
          </children>
       </VBox>
    </left>
@@ -41,19 +41,18 @@
             <HBox prefHeight="159.0" prefWidth="745.0" styleClass="home" />
             <HBox prefHeight="566.0" prefWidth="745.0" styleClass="home">
                <children>
-                  <VBox prefHeight="233.0" prefWidth="174.0">
+                  <VBox prefHeight="483.0" prefWidth="221.0">
                      <children>
-                        <ImageView fitHeight="144.0" fitWidth="188.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="144.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../../Downloads/mm.png" />
                            </image></ImageView>
-                        <Label alignment="TOP_CENTER" prefHeight="43.0" prefWidth="174.0" text="Label" />
                         <Label alignment="TOP_CENTER" layoutX="10.0" layoutY="154.0" prefHeight="31.0" prefWidth="174.0" text="STATUS" />
                      </children>
                   </VBox>
                   <VBox layoutX="10.0" layoutY="10.0" prefHeight="483.0" prefWidth="439.0">
                      <children>
-                        <GridPane alignment="CENTER" prefHeight="323.0" prefWidth="426.0">
+                        <GridPane alignment="CENTER" prefHeight="414.0" prefWidth="433.0" VBox.vgrow="ALWAYS">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -62,9 +61,6 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
@@ -81,10 +77,13 @@
                               <Label layoutX="227.0" layoutY="142.0" prefHeight="18.0" prefWidth="146.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                            </children>
                            <VBox.margin>
-                              <Insets left="6.0" />
+                              <Insets left="15.0" />
                            </VBox.margin>
                         </GridPane>
                      </children>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
                   </VBox>
                </children>
             </HBox>
