--- a/src/main/resources/fxml/dashboard.fxml
+++ b/src/main/resources/fxml/dashboard.fxml
@@ -19,7 +19,7 @@
                </font>
             </Label>
             <Region prefHeight="30.0" prefWidth="386.0" />
-            <Button maxWidth="300.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="170.0" style="-fx-background-color: #1f068c; -fx-background-radius: 20;" text="Employee Details" textFill="#adbed4" VBox.vgrow="ALWAYS">
+            <Button fx:id="employeedetails" maxWidth="300.0" mnemonicParsing="false" onMouseClicked="#employeeinfo" prefHeight="50.0" prefWidth="170.0" style="-fx-background-color: #1f068c; -fx-background-radius: 20;" text="Employee Details" textFill="#adbed4" VBox.vgrow="ALWAYS">
                <font>
                   <Font size="16.0" />
                </font>
