--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -11,12 +11,12 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="home" stylesheets="/css/styling.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.LoginController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="home" stylesheets="@../css/styling.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.LoginController">
    <left>
-      <VBox prefHeight="400.0" prefWidth="162.0" BorderPane.alignment="CENTER" />
+      <VBox nodeOrientation="LEFT_TO_RIGHT" prefHeight="400.0" prefWidth="162.0" BorderPane.alignment="CENTER" />
    </left>
    <right>
-      <VBox prefHeight="400.0" prefWidth="162.0" styleClass="home" BorderPane.alignment="CENTER" />
+      <VBox prefHeight="400.0" prefWidth="162.0" BorderPane.alignment="CENTER" />
    </right>
    <center>
       <VBox prefHeight="362.0" prefWidth="308.0" BorderPane.alignment="CENTER">
@@ -27,7 +27,7 @@
             <Insets />
          </BorderPane.margin>
          <children>
-            <VBox alignment="CENTER" prefHeight="302.0" prefWidth="276.0" style="-fx-background-radius: 10px;" VBox.vgrow="ALWAYS">
+            <VBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="302.0" prefWidth="276.0" style="-fx-background-radius: 10px;" VBox.vgrow="ALWAYS">
                <children>
                   <Label alignment="CENTER" prefHeight="29.0" prefWidth="200.0" text="Byte_Me">
                      <VBox.margin>
