--- a/src/main/resources/fxml/signup.fxml
+++ b/src/main/resources/fxml/signup.fxml
@@ -87,7 +87,7 @@
                      </children>
                   </VBox>
                   <Region layoutX="10.0" layoutY="168.0" prefHeight="10.0" prefWidth="276.0" />
-                  <Button fx:id="login12" mnemonicParsing="false" onMouseClicked="#validatesignup" prefHeight="35.0" prefWidth="162.0" style="-fx-background-color: #086ed4; -fx-background-radius: 15;" text="Login " textFill="WHITE">
+                  <Button fx:id="login12" mnemonicParsing="false" onMouseClicked="#validatesignup" prefHeight="35.0" prefWidth="162.0" style="-fx-background-color: #086ed4; -fx-background-radius: 15;" text="SignUp" textFill="WHITE">
                      <font>
                         <Font size="15.0" />
                      </font>
