--- a/src/main/resources/fxml/Employee.fxml
+++ b/src/main/resources/fxml/Employee.fxml
@@ -11,33 +11,34 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="611.0" prefWidth="908.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.EmployeeController">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <TableView editable="true" prefHeight="339.0" prefWidth="600.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
+            <TableView fx:id="tableview" editable="true" prefHeight="379.0" prefWidth="600.0" tableMenuButtonVisible="true">
               <columns>
-                <TableColumn prefWidth="75.0" text="Name" />
-                <TableColumn prefWidth="75.0" text="ID" />
-                  <TableColumn prefWidth="75.0" text="Salary" />
-                  <TableColumn prefWidth="75.0" text="Gender" />
+                <TableColumn fx:id="idcol" prefWidth="75.0" text="ID" />
+                <TableColumn fx:id="namecol" prefWidth="75.0" text="Name" />
+                  <TableColumn fx:id="phonecol" prefWidth="75.0" text="Phone Number" />
+                  <TableColumn fx:id="gendercall" prefWidth="75.0" text="Gender" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
+            <HBox alignment="TOP_CENTER" prefHeight="54.0" prefWidth="600.0" />
          </children>
       </VBox>
    </center>
    <top>
-      <VBox alignment="TOP_CENTER" prefHeight="85.0" prefWidth="919.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="63.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="234.0" text="My Market Management">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <HBox alignment="CENTER" prefHeight="54.0" prefWidth="912.0">
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
                   <HBox prefHeight="36.0" prefWidth="109.0">
                      <children>
@@ -47,12 +48,12 @@
                            </font></Label>
                      </children>
                   </HBox>
-                  <TextField prefHeight="26.0" prefWidth="190.0" promptText="Search Employee">
+                  <TextField fx:id="searchemp" prefHeight="26.0" prefWidth="190.0" promptText="Search Employee">
                      <HBox.margin>
                         <Insets right="9.0" />
                      </HBox.margin>
                   </TextField>
-                  <Button layoutX="160.0" layoutY="10.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="58.0" text="Add">
+                  <Button fx:id="addbutton" layoutX="160.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#addemployee" prefHeight="28.0" prefWidth="58.0" text="Add">
                      <HBox.margin>
                         <Insets left="9.0" />
                      </HBox.margin>
